--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
 nav {
   background-color:black;
   color:white;
-  padding: 1rem 2rem;
+  padding: 0.1rem 2rem;
   box-shadow: 0px 0px 2px 1px black;
 }
 
@@ -10,6 +10,7 @@ nav ul {
   list-style: none;
   display: flex;
   gap: 2rem;
+  align-items: center;
 }
 
 nav li {
@@ -59,4 +60,10 @@ footer {
 main {
   width: 70%;
   padding-left: 15%;
+}
+
+/* logo */
+
+.logo {
+  width: 200px;
 }
